--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -15,17 +15,18 @@ html {
 }
 
 body {
-    color: #24292E;
-    font-size: 0.9rem;
+    background-color: #f5f5f5;
+    color: #333;
+    font-size: 0.75rem;
 }
 
 a {
-    color: #24292E;
+    color: #333;
     text-decoration: none;
     cursor: pointer;
 }
 
-a:hover{
+a:hover, button:hover{
     opacity: 0.5;
     transition: 0.4s;
 }
@@ -37,4 +38,131 @@ img {
 
 li {
     list-style: none;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: none;
+}
+
+td,
+th {
+    border: none;
+    border-left: 1px solid #333;
+    border-top: 1px solid #333;
+    padding: 10px;
+    text-align: center;
+}
+
+td:first-child,
+th:first-child {
+    border-left: none;
+}
+
+tr:first-child td,
+tr:first-child th {
+    border-top: none;
+}
+
+/*-------------------------------------------
+header
+-------------------------------------------*/
+
+header{
+    max-width: 1000px;
+    border-bottom: 1px solid #c3c3c3;
+    padding-bottom: 26px;
+    margin:  0 auto 50px;
+}
+
+header h1{
+    max-width: 110px;
+    margin: 46px auto 36px;
+}
+
+header nav{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+header nav, header ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+header li{
+    margin-right: 14px;
+}
+
+header li:last-of-type{
+    margin-right: 0;
+}
+
+/*-------------------------------------------
+main
+-------------------------------------------*/
+
+main{
+    display: flex;
+    justify-content: space-between;
+    gap: 60px;
+    max-width: 800px;
+    margin: 0 auto 80px;
+}
+
+.item-image{
+    flex: 1;
+}
+
+.item-details{
+    flex: 1;
+}
+
+.item-details__info h2{
+    font-size: 1rem;
+    padding: 20px 0;
+    border-top: 1px solid #c3c3c3;
+    border-bottom: 1px solid #c3c3c3;
+    margin-bottom: 20px;
+}
+
+.item-details__info p {
+    margin-bottom: 30px;
+}
+
+.item-details__shopping{
+    margin-bottom: 30px;
+}
+
+.item-details__shopping select{
+    width: 100%;
+    cursor: pointer;
+}
+
+.item-details__shopping button{
+    margin-top: 20px;
+    width: 100%;
+    background-color: #4b4b4b;
+    color: #fff;
+    padding: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.item-detail__size-info th{
+    background-color: #ECEBEB;
+}
+
+/*-------------------------------------------
+footer
+-------------------------------------------*/
+
+footer{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+footer p{
+    font-size: 0.625rem;
 }
